--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -7,7 +7,8 @@
 {% endblock css %}
 
 {% block content %}
-    <h1 class="mt-5 pt-5"><strong>{{ content }}</strong></h1>
+    <h2 class="mt-5 pt-5"><strong>{{ content }}</strong></h2>
+    <p class="pt-4">{{ text_on_page }}</p>
 {% endblock content %}
 
 {% block footer %}
@@ -17,6 +18,3 @@
     </div>
 </footer>
 {% endblock footer %}
-
-
-
