The fourth commit

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -88,13 +88,13 @@
                             height="16">
                     </button>
                     <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Все товары</a></li>
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Шапки</a></li>
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Куртки</a></li>
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Футболки</a></li>
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Штаны</a></li>
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Обувь</a></li>
-                        <li><a class="dropdown-item text-white" href="goods/catalog.html"></a></li>
+                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Все товары</a></li>
+                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Шапки</a></li>
+                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Куртки</a></li>
+                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Футболки</a></li>
+                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Штаны</a></li>
+                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">Обувь</a></li>
+                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}"></a></li>
                     </ul>
                 </div>
                 <!-- Значек корзины, вызывает модальное окно -->
