add photos of goods

--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -45,7 +45,11 @@
     <!-- Карта товара -->
     <div class="col-lg-4 col-md-6 p-4">
         <div class="card border-primary rounded custom-shadow">
-            <img src="{% static product.image %}" class="card-img-top" alt="...">
+                {% if product.image %}
+                    <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                {% else %}
+                    <img src="{% static "deps/images/Not found image.png" %}" class="card-img-top" alt="...">   
+                {% endif %}
             <div class="card-body">
                 <a href="../goods/product.html">
                     <p class="card-title">{{ product.name }}</p>
