Fix login form and controller

--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -13,7 +13,7 @@
 
         <form action="{% if request.GET.q %}{% url "catalog:search" %}{% else %}{% url "catalog:index" slug_url %}{% endif %}" method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
             <div class="form-check text-white mx-3">
-                <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault" value="on" {% if request.GET.on_sale == 'on'%}checked{% endif %}>
+                <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault" value="on" {% if request.GET.on_sale == "on" %}checked{% endif %}>
                 {% if request.GET.q %}
                     <input type="hidden" name="q" value="{{ request.GET.q }}">
                 {% endif %}
@@ -107,7 +107,7 @@
 
 </div>
     <!-- Пагинация -->
-    {% if not goods %}
+    {% if goods %}
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center my-4">
                 <div class="custom-shadow d-flex">
