Add registration form

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -19,7 +19,7 @@
 
             <div class="mb-3">
               <label for="id_password" class="form-label">Пароль</label>
-              <input type="text" class="form-control" name="password" id="id_password"
+              <input type="password" class="form-control" name="password" id="id_password"
               placeholder="Введите пароль" required />
             </div>
 
