Add new redirect after login

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -9,7 +9,9 @@
           <h2 class="text-center mb-4">Авторизация</h2>
           <form action="{% url 'user:login' %}" method="post">
             {% csrf_token %}
-
+            {% if request.GET.next %}
+              <input type="hidden" name="next" value="{{request.GET.next}}">
+            {% endif %}
             <div class="mb-3">
               <label for="id_username" class="form-label">Имя пользователя</label>
               <input type="text" class="form-control"
