Add to cart view, refactor included cart templates

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="{% static "deps/css/my_footer_css.css" %}">
 {% endblock css %}
 
+{% block model_cart %}
+{% include "includes/cart_button.html" %}
+{% endblock model_cart %}
+
 {% block content %}
     <h1 class="mt-5 pt-5"><strong>{{ content }}</strong></h1>
 {% endblock content %}
