--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% load carts_tags %}
+
 {% block content %}
+{% user_carts request as carts %}
 <div class="row">
     <div class="container mt-5">
         <div class="row">
@@ -80,6 +83,7 @@
                 </div>
             </div>
             <!-- Корзина -->
+            {% user_carts request as carts %}
             <div class="col-md-7">
                 <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
                     <h3 class="text-center mb-4">Корзина</h3>
