--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -2,6 +2,12 @@
 {% load static %}
 {% load goods_tag %}
 
+{% block model_cart %}
+{% include "includes/cart_button.html" %}
+{% endblock model_cart %}
+
+
+
 {% block content %}
 <div class="row">
     <!-- Форма фильтров -->
@@ -95,7 +101,7 @@
                     {% else %}
                         <p><strong>{{ product.price }} $</strong></p>
                     {% endif %}
-                    <a href="#" class="btn add-to-cart">
+                    <a href="{% url "cart:cart_add" product.slug %}" class="btn add-to-cart">
                         <img class="mx-1" src="{% static "deps/icons/cart.svg" %}" alt="Catalog Icon"
                             width="32" height="32">
                     </a>
