Add AJAX request and JSON response

--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -101,7 +101,9 @@
                     {% else %}
                         <p><strong>{{ product.price }} $</strong></p>
                     {% endif %}
-                    <a href="{% url "cart:cart_add" product.slug %}" class="btn add-to-cart">
+                    <a href="{% url "cart:cart_add" %}" class="btn add-to-cart" 
+                    data-product-id="{{ product.id }}">
+                        {% csrf_token %}
                         <img class="mx-1" src="{% static "deps/icons/cart.svg" %}" alt="Catalog Icon"
                             width="32" height="32">
                     </a>
