--- a/carts/templates/carts/includes/included_cart.html
+++ b/carts/templates/carts/includes/included_cart.html
@@ -28,7 +28,9 @@
                     </div>
                     <div class="col p-0"><strong>{{ cart.product_price }} $</strong></div>
                     <div class="col p-0">
-                        <a href="{% url "cart:cart_remove" %}" class="remove-from-cart" data-cart-id="">
+                        <a href="{% url "cart:cart_remove" %}" class="remove-from-cart"
+                        data-cart-id="{{ cart.id }}">
+                            {% csrf_token %}
                             <img class="mx-1" src="{% static "deps/icons/trash3-fill.svg" %}"
                                 alt="Catalog Icon" width="16" height="16">
                         </a>
